--- a/css/responsive.css
+++ b/css/responsive.css
@@ -4,7 +4,7 @@
         max-width: 100%;
 
     }
-
+    
    
 
 }
@@ -44,53 +44,87 @@
         padding: 0.2rem 0.5rem;
     }
 
+    .about .about-tag{
+    text-align: left;
+     padding:0rem;
+     font-size: 32px;
+     }
+ .about .feature_section .row{
+    position: relative;
+    left: 6rem;
+ }
+ .about .about_section img{
+    width: 100%
+ }
 
-    
-   
+ .about .about_section .cult{
+    padding-top: 4rem;;
+ }
 
-
-
+ .about .about_section ,
+ .about  h2, 
+ .about  .about-details 
+ {
+    padding: 0 ;
+ }
+ 
 }
 
 
-@media (max-width: 767px) {
+@media (max-width: 787px) {
     body, html{
-        font-size: 8px;;
+        font-size: 8px;
+        overflow-x: hidden;
     }
     .section-subtitle{
         max-width: 80%;
     }
-
     
-
+    
+   
 
     /* banner */
     .banner-section{
         height: 80vh;
     }
-   
 
     .banner-section .carousel-caption{
     top: 20%;
    
 }
 
+.about .about-tag{
+    font-size: 24px;
+    }
+
+
 }
 
 @media (max-width: 590px) {
     body, html{
         font-size: 6px;
+        
     }
-
+    
+    
     .banner-section{
         height: 70vh;
     }
+
+    .about .about_section ,
+    .about  h2, 
+    .about  .about-details 
+    {
+       padding: 0 2rem ;
+    }
+    
   
 }
 @media (max-width: 380px) {
     body, html{
         font-size: 5px;
     }
+    
   
 }
 
